solved some Alignment problem.

--- a/src/css/css-responsive.css
+++ b/src/css/css-responsive.css
@@ -111,6 +111,13 @@
   .pera {
     display: none;
   }
+  .BecomeOurPartner_section_2 {
+    .agent-card-slider {
+      .agent-card {
+        padding: 2rem;
+      }
+    }
+  }
 }
 
 @media screen and (width < 548px) {
