--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1321,7 +1321,7 @@ li {
     .agent-card {
       width: 25rem;
       height: 23rem;
-      padding: 2rem;
+      padding: 3rem;
       border: 2px solid #e7e7e7dd;
       border-radius: 4rem;
       -webkit-border-radius: 4rem;
